Fixing claim button spacing

--- a/src/app/components/lists/list-items/list-item-single/list-item-single.component.css
+++ b/src/app/components/lists/list-items/list-item-single/list-item-single.component.css
@@ -38,8 +38,8 @@
 #mainRow{
     /* box-shadow: 0px 0px 7px 0px #C7C7C7; */
 }
-.claimButton{
-    width:125px;
+#claimButton{
+    
 }
 .leftAlignedText{
     position: relative;
